--- a/contacte.html
+++ b/contacte.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <h1>Canvis en la branca. Vero</h1>
 <body>
     Posali algo
 </body>
